# betterproto-service-example

./: Makefile  README.md  buf.gen.yaml  buf.yaml  pyproject.toml
proto/example/services/v1/: common_enum.proto  different_service.proto  user_service.proto
