[tool.poetry]
name = "betterproto-service-example"
version = "0.1.0"
description = ""
authors = ["Shay Nehmad <shayn@recolabs.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio-tools = "^1.36.1"
grpcio = "^1.36.1"
googleapis-common-protos = "^1.53.0"
betterproto = { git = "https://github.com/danielgtaylor/python-betterproto.git", extras = ["compiler"] }
grpclib = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
